syntax = 'proto3';
option java_multiple_files = true;
package dk.cosby.si.exam.driverscheduleapi;

message FindByLessonStartAndLessonEndRequest {
  string start = 1;
  string end = 2;
}

message FindByLessonStartAndLessonEndResponse {
  bool acknowledged = 1;
  bool success = 2;
  string errorMessage = 3;
  repeated Schedule schedules = 4;
}

message Schedule {
  string id = 1;
  string teacherId = 2;

  message Student {
    string id = 1;

    message Lesson {
      string start = 1;
      string end = 2;
    }

    repeated Lesson lessons = 2;
  }

  repeated Student students = 3;
}

service FindByLessonStartAndLessonEndService {
  rpc FindByLessonStartAndLessonEnd (FindByLessonStartAndLessonEndRequest) returns (FindByLessonStartAndLessonEndResponse);
}